# Code-Sage

./: .example.codesage.yaml  .gitignore  CHANGELOG.md  COMMIT_PLAN.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  FEATURES.md  LICENSE  PROJECT_SUMMARY.md  PYPI_PUBLISH.md  README.md  publish.sh  pyproject.toml  requirements.txt  setup.py
code_sage/: __init__.py
code_sage/ai/: __init__.py  enrichment.py  provider.py
code_sage/analyzers/: __init__.py  javascript_analyzer.py  python_analyzer.py
code_sage/cli/: __init__.py  main.py  reporter.py
code_sage/core/: __init__.py  aggregator.py  analyzer.py  config.py  engine.py  exceptions.py  logger.py  models.py  pattern_matcher.py
code_sage/git/: __init__.py  hooks.py
code_sage/security/: __init__.py  scanner.py
code_sage/utils/: file_utils.py
examples/: example.js  example.py
tests/: __init__.py  test_config.py  test_python_analyzer.py
